--- a/Resampling.tex
+++ b/Resampling.tex
@@ -1,3 +1,7 @@
+Baron Munchausen Reference for Bootstrap
+
+
+%----------------------------------------------------------------------------------------------------------------%
 Resampling is any of a variety of methods for doing one of the following:
 
 \begin{itemize}
