--- a/Resampling.tex
+++ b/Resampling.tex
@@ -12,6 +12,29 @@ Resampling is any of a variety of methods for doing one of the following:
 
 Common resampling techniques include bootstrapping, jackknifing and permutation tests.
 
+\section{Resampling}
+
+Resampling is used to estimate the precision of sampling statistics by using subsets of available data (jackknife) or drawing randomly with replacement form a set of data points (bootstrapping).
+
+Common resampling techniqes include
+
+\begin{itemize}
+\item Bootstrapping
+\item Jackknife
+\item Permutation Tests
+\end{itemize}
+
+%------------------------------------------------------------------------------%
+\subsection{Permutation Test}
+
+(Also called a randomization testm or an exact test)
+
+This is a type of statistical significance test in which a reference distribution is obtained by 
+calculating all possiblee values of a tests statistic under re-arrangements of the labels of the observed data points.
+
+Permutation test theory has evolved from the work of R.A. Fisher and E.J.G Pitman in the 1930s.
+
+%------------------------------------------------------------------------------%
 
 %--------------------------------------------------------------------%
 \subsection{Permutation Tests (Exact Tests)}
