--- a/MissingCensoredData.tex
+++ b/MissingCensoredData.tex
@@ -1,3 +1,64 @@
+Missing values in R
+
+> # R version 2.4.1
+> rm(list=ls())
+> mcars = read.table("http://www.utstat.toronto.edu/~brunner/appliedf12/data/missingcars.data")
+> mcars
+   Cntry lper100k weight length
+1     US     19.8   2178   5.92
+2  Japan      9.9   1026   4.32
+3     US     10.8   1188     NA
+4   <NA>     12.5     NA   5.11
+5   <NA>       NA   1485   5.03
+6     US       NA   1485   5.03
+7  Europ     10.4    972   4.37
+8     US     13.2   1665   5.44
+9   <NA>     17.0   1539   4.88
+10    US      9.2   1003     NA
+> attach(mcars)
+
+> # Make indicator dummy variables for Cntry as before
+> c1 = numeric(n); c1[Cntry=='Europ'] = 1
+> c2 = numeric(n); c2[Cntry=='Japan'] = 1
+> cbind(Cntry,c1,c2)
+      Cntry c1 c2
+ [1,]     3  0  0
+ [2,]     2  0  1
+ [3,]     3  0  0
+ [4,]    NA  0  0
+ [5,]    NA  0  0
+ [6,]     3  0  0
+ [7,]     1  1  0
+ [8,]     3  0  0
+ [9,]    NA  0  0
+[10,]     3  0  0
+> # NA are U.S.
+
+> Cntry[length>5]
+[1] US   <NA> <NA> <NA> US   US   <NA>
+Levels: Europ Japan US
+> Cntry[length<5]
+[1] Japan <NA>  Europ <NA>  <NA> 
+Levels: Europ Japan US
+
+
+> 
+> weight[lper100k<10] # Okay?
+[1] 1026   NA   NA 1003
+> length(weight[lper100k<10]) 
+[1] 4
+> mean(lper100k[Cntry=='US'])
+[1] NA
+> a = lper100k[Cntry=='US']; a
+[1] 19.8 10.8   NA   NA   NA 13.2   NA  9.2
+> mean(a,na.rm=T)
+[1] 13.25
+> length(a,na.rm=T)
+Error: incorrect number of args to 'length'
+
+
+
+
 \section{Missing and Censored Data}
 %-------------------------------------%
 \subsection{Missing Data}
