--- a/PCAwithR/PCAwithR.tex
+++ b/PCAwithR/PCAwithR.tex
@@ -51,7 +51,9 @@ fit # print results
 \end{framed}
 %-------------------------------------------------------------- %
 \subsection{Scree Plots}
-\texttt{screeplot.default} plots the variances against the number of the principal component. This is also the plot method for classes "\texttt{princomp}" and "\texttt{prcomp}".
+\texttt{screeplot.default} plots the variances against the number of the principal component. 
+
+This is also the plot method for classes "\texttt{princomp}" and "\texttt{prcomp}".
 
 
 \end{document}
