--- a/PCAwithR/PCA1.tex
+++ b/PCAwithR/PCA1.tex
@@ -20,10 +20,14 @@ plot(fit,type="lines") # scree plot
 fit$scores # the principal components
  biplot(fit) 
 
-click to view 
+%============================================================================ %
 
-Use cor=FALSE to base the principal components on the covariance matrix. Use the covmat= option to enter a correlation or covariance matrix directly. If entering a covariance matrix, include the option n.obs=.
+Use cor=FALSE to base the principal components on the covariance matrix. 
+Use the covmat= option to enter a correlation or covariance matrix directly. 
+If entering a covariance matrix, include the option n.obs=.
 
+
+%============================================================================ %
 The principal( ) function in the psych package can be used to extract and rotate principal components. 
 
 # Varimax Rotated Principal Components
@@ -34,9 +38,10 @@ library(psych)
 
 mydata can be a raw data matrix or a covariance matrix. Pairwise deletion of missing data is used. rotate can "none", "varimax", "quatimax", "promax", "oblimin", "simplimax", or "cluster" . 
 
-Exploratory Factor Analysis
+%============================================================================ %
+\subsection*{Exploratory Factor Analysis}
 
-The factanal( ) function produces maximum likelihood factor analysis. 
+The \texttt{factanal( )} function produces maximum likelihood factor analysis. 
 
 # Maximum Likelihood Factor Analysis
  # entering raw data and extracting 3 factors, 
@@ -48,11 +53,10 @@ load <- fit$loadings[,1:2]
 plot(load,type="n") # set up plot 
 text(load,labels=names(mydata),cex=.7) # add variable names 
 
-click to view 
 
 The rotation= options include "varimax", "promax", and "none". Add the option scores="regression" or "Bartlett" to produce factor scores. Use the covmat= option to enter a correlation or covariance matrix directly. If entering a covariance matrix, include the option n.obs=.
 
-The factor.pa( ) function in the psych package offers a number of factor analysis related functions, including principal axis factoring. 
+The \texttt{factor.pa( )} function in the \textbf{\textit{psych}} package offers a number of factor analysis related functions, including principal axis factoring. 
 
 # Principal Axis Factor Analysis
  library(psych)
@@ -61,9 +65,11 @@ The factor.pa( ) function in the psych package offers a number of factor analysi
 
 mydata can be a raw data matrix or a covariance matrix. Pairwise deletion of missing data is used. Rotation can be "varimax" or "promax". 
 
-Determining the Number of Factors to Extract
+%========================================================================================================== %
+\subsection{Determining the Number of Factors to Extract}
 
 A crucial decision in exploratory factor analysis is how many factors to extract. The nFactors package offer a suite of functions to aid in this decision. Details on this methodology can be found in a PowerPoint presentation by Raiche, Riopel, and Blais. Of course, any factor solution must be interpretable to be useful. 
+\begin{verbatim}
 
 # Determine Number of Factors to Extract
  library(nFactors)
@@ -72,17 +78,4 @@ A crucial decision in exploratory factor analysis is how many factors to extract
    rep=100,cent=.05)
  nS <- nScree(x=ev$values, aparallel=ap$eigen$qevpea)
  plotnScree(nS) 
-
-click to view 
-
-Going Further 
-
-The FactoMineR package offers a large number of additional functions for exploratory factor analysis. This includes the use of both quantitative and qualitative variables, as well as the inclusion of supplimentary variables and observations. Here is an example of the types of graphs that you can create with this package.
-
-# PCA Variable Factor Map 
-library(FactoMineR)
- result <- PCA(mydata) # graphs generated automatically 
-
-click to view 
-
-Thye GPARotation package offers a wealth of rotation options beyond varimax and promax.
+\end{verbatim}
