--- a/PCAwithR/pca-main.tex
+++ b/PCAwithR/pca-main.tex
@@ -19,6 +19,12 @@
 \section{Dimensionality Reduction}
 
 
+\subfile{variableselection.tex}
+\subfile{pca-screeplot.tex}
+\subfile{pca-kmobartlett.tex}
+\subfile{factorminer.tex}
+\newpage
+%=========================================================================== %
 \section{Principal Component Analysis }
 
 \subsection{Introduction}
@@ -160,28 +166,6 @@ to orthogonal solutions because they produce cleaner, more easily-interpreted re
 However, oblique solutions are also somewhat more complicated to interpret, compared to
 orthogonal solutions.  For this reason, we will focus only on the interpretation of orthogonal solutions
 \end{itemize}
-%============================================== %
-\newpage
-\section{Sampling adequacy (KMO Statistic)}
-\begin{itemize}
-\item	
-Measured by the Kaiser-Meyer-Olkin (KMO) statistics, sampling adequacy predicts if the analyses are likely to perform well, based on correlation and partial correlation. KMO can also be used to assess which variables to drop from the model because they are too multi-collinear.
-\item
-There is a KMO statistic for each individual variable, and their sum is the KMO overall statistic. KMO varies from 0 to 1.0 and KMO overall should be 0.60 or higher to proceed with factor analysis. Values below 0.5 imply that factor analysis or PCA may not be appropriate. (Approach to overcoming this: If it is not, drop the \textbf{indicator variables} with the lowest individual KMO statistic values, until KMO overall rises above 0.60.)
-\item
-Kaiser-Meyer-Olkin
-To compute KMO overall, the numerator is the sum of squared correlations of all variables in the analysis (except the 1.0 self-correlations of variables with themselves, of course). 
-\item The denominator is this same sum plus the sum of squared partial correlations of each variable i with each variable j, controlling for others in the analysis. The concept is that the partial correlations should not be very large if one is to expect distinct factors to emerge from factor analysis.
-\end{itemize}
-\subsection{Bartlett's Test for Sphericity}
-Bartlett's measure tests the null hypothesis that the original correlation matrix is an identity
-matrix. For PCA and factor analysis to work we need some relationships between variables and if the R-
-matrix were an identity matrix then all correlation coefficients would be zero. Therefore, we
-want this test to be signifcant (i.e. have a significance value less than 0.05). A significant test
-tells us that the correlation matrix is not an identity matrix; therefore, there are some relationships
-between the variables we hope to include in the analysis. For these data, Bartlett's test is
-highly significant (p < 0.001), and therefore factor analysis is appropriate.
-
 \newpage
 \section{Determining the Number of Meaningful Components to Retain}
 Previously it was stated that the number of components extracted is equal to the number of variables
@@ -475,98 +459,5 @@ Performs a principal components analysis on the given data matrix and returns th
 	Rape    -0.5415599 -0.8168504 -0.1986662
 	\end{verbatim}
 \end{framed}
-%=========================================================================== %
-\newpage
-\section{Singular Value Decomposition (SVD)}
-\textit{Source: : http://iridl.ldeo.columbia.edu/dochelp/StatTutorial/SVD/ \\}
-Singular value decomposition (SVD) is quite possibly the most widely-used multivariate statistical technique used in the atmospheric sciences. The technique was first introduced to meteorology in a 1956 paper by Edward Lorenz, in which he referred to the process as empirical orthogonal function (EOF) analysis. Today, it is also commonly known as principal-component analysis (PCA). All three names are still used, and refer to the same set of procedures within the Data Library. 
-
-
-The purpose of singular value decomposition is to reduce a dataset containing a large number of values to a dataset containing significantly fewer values, but which still contains a large fraction of the variability present in the original data. Often in the atmospheric and geophysical sciences, data will exhibit large spatial correlations. SVD analysis results in a more compact representation of these correlations, especially with multivariate datasets and can provide insight into spatial and temporal variations exhibited in the fields of data being analyzed. 
-
-
-There are a few caveats one should be aware of before computing the SVD of a set of data. First, the data must consist of anomalies. Secondly, the data should be de-trended. When trends in the data exist over time, the first structure often captures them. If the purpose of the analysis is to find spatial correlations independent of trends, the data should be de-trended before applying SVD analysis. 
-
-\newpage
-
-\subsection*{Question 5}
-Load the hand-written digits data using the following commands:
-
-\begin{framed}
-	\begin{verbatim}
-	library(ElemStatLearn)
-	data(zip.train)
-	\end{verbatim}
-\end{framed}
-
-Each row of the `\texttt{zip.train}` data set corresponds to a hand written digit. The
-first column of the zip.train data is the actual digit. The next 256 columns
-are the intensity values for an image of the digit. To visualize the digit we
-can use the `\texttt{zip2image()}` function to convert a row into a 16 x 16 matrix:
-
-\begin{framed}
-	\begin{verbatim}
-	# Create an image matrix for the 3rd row, which is a 4
-	im = zip2image(zip.train,3)
-	image(im)
-	\end{verbatim}
-\end{framed}
-
-
-Using the `zip2image` file, create an image matrix for the 8th and 18th rows.
-\begin{figure}
-	\centering
-	\includegraphics[width=0.7\linewidth]{./DAquiz3Graph5b}
-	\caption{}
-	\label{fig:DAquiz3Graph5}
-\end{figure}
-For each image matrix calculate the `\textit{\textbf{svd}}` of the matrix (with no scaling). 
-
-\begin{itemize}
-	\item[(i)] What is the percent variance explained by the \textbf{first} singular vector for the image
-	from the 8th row? 
-	\item[(ii)] What is the percent variance explained for the image from the
-	18th row? (by the \textbf{first} singular vector)
-	\item[(iii)] Why is the percent variance lower for the image from the 18th row?
-\end{itemize}
-\newpage
-\begin{framed}
-	\begin{verbatim}
-	
-	im8 <- zip2image(zip.train, 8)
-	im18 <- zip2image(zip.train, 18)
-	
-	svd8 <- svd(im8)
-	svd18 <- svd(im18)
-	
-	par(mfrow=c(2,2))
-	plot(svd8$d^2/sum(svd8$d^2),
-	xlab="Column",ylab="Percent of variance explained for Row 8",
-	pch=19)
-	
-	plot(svd18$d^2/sum(svd18$d^2),
-	xlab="Column",ylab="Percent of variance explained for Row 18",
-	pch=19)
-	
-	image(im8)
-	
-	image(im18)
-	
-	\end{verbatim}
-\end{framed}
-\newpage
-From the image - the second image is more complicated, so there are multiple patterns each explaining a large percentage of variance.
-\begin{figure}[h!]
-	\centering
-	\includegraphics[width=1.0\linewidth]{./DAquiz3Graph5b}
-	\caption{}
-	\label{fig:DAquiz3Graph5}
-\end{figure}
-
-\end{document}
-~~The first singular vector explains 98\% of the variance for row 8 and 48\% for row 18. 
-The reason the first singular vector explains less variance for the 18th row is because the 8th row has higher average values.~~
-**The first singular vector explains 98\% of the variance for row 8 and 48\% for row 18. 
-The reason the first singular vector explains less variance for the 18th row is that the image is more complicated, so there are multiple patterns each explaining a large percentage of variance.**
 
 \end{document}
