--- a/PCAwithR/variableselection.tex
+++ b/PCAwithR/variableselection.tex
@@ -1,31 +1,7 @@
-\documentclass[a4paper,12pt]{article}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\usepackage{eurosym}
-\usepackage{vmargin}
-\usepackage{amsmath}
-\usepackage{graphics}
-\usepackage{epsfig}
-\usepackage{framed}
-\usepackage{subfigure}
-\usepackage{fancyhdr}
-
-\setcounter{MaxMatrixCols}{10}
-%TCIDATA{OutputFilter=LATEX.DLL}
-%TCIDATA{Version=5.00.0.2570}
-%TCIDATA{<META NAME="SaveForMode"CONTENT="1">}
-%TCIDATA{LastRevised=Wednesday, February 23, 201113:24:34}
-%TCIDATA{<META NAME="GraphicsSave" CONTENT="32">}
-%TCIDATA{Language=American English}
-
-\pagestyle{fancy}
-\setmarginsrb{20mm}{0mm}{20mm}{25mm}{12mm}{11mm}{0mm}{11mm}
-\lhead{Variable Selection with R} \rhead{Kevin O'Brien} \chead{Dublin R} %\input{tcilatex}
-
-%http://www.electronics.dit.ie/staff/ysemenova/Opto2/CO_IntroLab.pdf
-\begin{document}
-
-\tableofcontents
-\newpage
+\documentclass[pca-main.tex]{subfiles} 
+\begin{document} 
+	\newpage
+	%========================================================================== %
 \section{Stepwise Regression (using \texttt{R}}
 
 SPSS can be very opaque in determining how particularly statistical routines are carried out. Conversely the statistical programming language \texttt{R} is usually quite clear, once a familiarity with the language has been developed.
